<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.restcomm</groupId>
		<artifactId>restcomm-parent</artifactId>
		<version>8.0.0-28</version>
	</parent>
	
    <groupId>javax.sip</groupId>
    <artifactId>jain-sip</artifactId>
    <version>8.0.0-3-SNAPSHOT</version>

    <packaging>pom</packaging>

    <name>jain-sip</name>
    <description>JAIN SIP Parent pom</description>
    <url>http://code.google.com/p/jain-sip/</url>

    <developers>
        <developer>
            <id>jean.deruelle</id>
            <name>Jean Deruelle</name>
            <email>jean.deruelle@gmail.com</email>
            <organization>TeleStax</organization>
            <organizationUrl>http://www.telestax.com/</organizationUrl>
            <roles>
                <role>Active Developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
        <developer>
            <id>vralev</id>
            <name>Vladimir Ralev</name>
            <email>vladimir.ralev@gmail.com</email>
            <organization>TeleStax</organization>
            <organizationUrl>http://www.telestax.com/</organizationUrl>
            <roles>
                <role>Active Developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
        <developer>
            <id>ranga</id>
            <name>ranga</name>
            <email>mranga@gmail.com</email>
            <organization>NIST</organization>
            <organizationUrl>http://www.nist.gov/</organizationUrl>
            <roles>
                <role>Project Lead</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
        <developer>
            <id>yulianoifa</id>
            <name>yulianoifa</name>
            <email>yulian.oifa@mobius-software.com</email>
            <organization>Mobius Software LTD</organization>
            <organizationUrl>https://www.mobius-software.com/</organizationUrl>
            <roles>
                <role>Project Lead</role>
            </roles>
            <timezone>+1</timezone>
        </developer>		
    </developers>
    <licenses>
        <license>
            <name>Public Domain</name>
            <url>http://www.gnu.org/licenses/license-list.html#PublicDomain</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <dependencies>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.8.9</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>                    
    </dependencies>
    <modules>
        <module>jain-sip-api</module>
        <module>jain-sip-testsuite-common</module>
        <module>jain-sip-ri</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
        <!-- IDEs has a problem when we use late binding with @ in the surefire arg line.
        Therefore we set this empty property here-->
        <jacocoArgLine />       
    </properties>

    <profiles>
        <profile>
            <id>performance</id>
            <modules>
                <module>jain-sip-performance</module>
            </modules>
        </profile>          
        <profile>
            <id>examples</id>
            <modules>
                <module>jain-sip-examples</module>
            </modules>
        </profile>
        <profile>
            <id>docs</id>
            <modules>
                <module>docs</module>
            </modules>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>                    
                </plugins>
            </build>
        </profile>  
        
        <profile>
            <id>int-testing</id>
            <modules>
                <module>jain-sip-testsuite</module>
            </modules>
        </profile>                                             
        <profile>
            <id>sctp</id>
            <modules>
                <module>jain-sip-sctp</module>
            </modules>
        </profile>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <!-- repositories -->
    <repositories>

        <repository>
			<id>mobius-telestax-private-releases-repository</id>
			<name>Mobius Releases Repository For Telestax</name>
			<url>http://nexus.mobius-software.com:8081/repository/telestax-local</url>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>                            
		</repository>	      
    </repositories>
    
    <pluginRepositories>
        <pluginRepository>
			<id>mobius-telestax-private-releases-repository</id>
			<name>Mobius Releases Repository For Telestax</name>
			<url>http://nexus.mobius-software.com:8081/repository/telestax-local</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</pluginRepository>
    </pluginRepositories>       

    <distributionManagement>
        <repository>
	      <id>mobius-telestax-private-releases-repository</id>
	      <name>Mobius Releases Repository For Telestax</name>
          <url>http://nexus.mobius-software.com:8081/repository/telestax-local</url>
	    </repository>
    </distributionManagement>  

    <build>	
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.9</version>
                <executions>
                    <!--
                        Prepares the property pointing to the JaCoCo runtime agent which
                        is passed as VM argument when Maven the Surefire plugin is executed.
                    -->
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <!--
                                Sets the name of the property containing the settings
                                for JaCoCo runtime agent.
                            -->
                            <propertyName>jacocoArgLine</propertyName>
                            <append>true</append>
                        </configuration>
                    </execution>
                    <!--
                        Ensures that the code coverage report for unit tests is created after
                        unit tests have been run.
                    -->
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <!-- Sets the output directory for the code coverage report. -->
                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

	
            <plugin>
                <artifactId>maven-release-plugin</artifactId>                		  	
            </plugin>
        </plugins>
    </build>

    <scm>
        <connection>scm:git:git@bitbucket.org:telestax/telscale-jsip.git</connection>
        <developerConnection>scm:git:git@bitbucket.org:telestax/telscale-jsip.git</developerConnection>
        <url>https://bitbucket.org/telestax/telscale-jsip</url>
      <tag>HEAD</tag>
  </scm>

</project>